--- a/accueil.html
+++ b/accueil.html
@@ -13,5 +13,7 @@
   <h1 color:#FFFFFF>
  bien venu chez notre ecole de conduite</h1>
   <img src="autoimg.jpg">
+  <img src="autoimg2.jpg">
+  
   </body>
 </html>
