--- a/accueil.html
+++ b/accueil.html
@@ -14,6 +14,7 @@
  bien venu chez notre ecole de conduite</h1>
   <img src="autoimg.jpg">
   <img src="autoimg2.jpg">
+  <img src="autoimg3.jpg">
   
   </body>
 </html>
